src/views/scss/main.scss
@keyframes effect {
    0% {
      opacity: 0;
    }
    80% {
      opacity: 0.85;
    }
    100% {
      opacity: 1;
    }
  }
  
  /* WINDOW APP */
  .appWindow {
    position: relative;
  
    height: 90%;
    width: 90%;
    top: 50%;
    left: 50%;
    margin-right: -50%;
    transform: translate(-50%, -50%);
  
    border-radius: 10px;
    overflow: hidden;
    position: absolute;
  
    opacity: 0;
    animation-delay: 0.5s;
    animation: effect 0.55s ease-in-out;
    animation-fill-mode: forwards;
  
    box-shadow: 10px 10px 35px var(--shadow-color-first),
      -10px -10px 35px var(--shadow-color-second);
  }
  
  /* FRAME FOR MAIN BUTTONS & MENU */
  .frame {
    position: absolute;
    overflow: hidden;
  
    height: 100%;
    width: 100%;
  
    background: linear-gradient(
      -120deg,
      var(--extra-light) -30%,
      var(--contrast-color-dark) 100%
    );
  }
  
  /* MAIN WINDOW */
  .window {
    position: absolute;
    overflow: hidden;
    display: flex;
  
    height: 93%;
    width: 97%;
  
    top: 51%;
    left: 50%;
    margin-right: -50%;
    transform: translate(-50%, -50%);
  
    border-radius: 7px;
    background-color: var(--background-window-color);
  }
  
  /* MENU BUTTON */
  .menu {
    position: absolute;
  
    width: 25px;
    height: 20px;
  
    margin-left: 15px;
    margin-top: 5px;
  
    border: none;
    border-radius: 2px;
  
    background-color: transparent;
    cursor: pointer;
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
  
    color: var(--contrast-color-dark);
  }
  
  /* BACK BUTTON */
  .btnBack {
    position: absolute;
  
    margin-top: 40px;
    margin-left: 25px;
  
    height: 35px;
    width: 35px;
    opacity: 0;
    border-radius: 50%;
    border: none;
  
    background-color: var(--extra-light);
    color: var(--contrast-color-light);
    font-size: 15px;
    font-weight: 900;
    text-align: center;
  
    cursor: pointer;
  
    animation: effect 1s ease-in-out;
    animation-delay: 1.5s;
    animation-fill-mode: forwards;
    transition: all 0.5s ease-in-out;
  
    &:hover {
      background-color: var(--contrast-color-light);
      color: var(--contrast-color-dark);
  
      transition: all 0.5s ease-in-out;
    }
  }
  a {
    text-decoration: none;
    &:hover,
    &:active,
    &:focus,
    &:visited,
    &:link {
      color: inherit;
    }
  }
  
  /* SELECT */
  #left {
    position: relative;
    display: flex;
  
    margin-top: 2%;
    width: 25%;
    height: 100%;
  
    z-index: 1;
  
    animation: effect 0.3s ease-in-out;
    animation-delay: 0.3s;
    opacity: 0;
    animation-fill-mode: forwards;
  }
  
  #select {
    background-color: var(--background-color-second);
  
    display: flex;
    align-items: center;
    justify-content: center;
    margin-left: 2%;
  
    width: 100%;
    height: 10%;
  
    border-radius: 10px;
    box-shadow: 6px 6px 22px var(--shadow-color-first),
      -6px -6px 22px var(--shadow-color-second);
  }
  
  .searchInput {
    background-color: var(--select);
    color: var(--text-main-color);
  
    margin-top: 5%;
    margin-left: 5%;
    padding: 4%;
  
    height: 60%;
    width: 75%;
    border: none;
    border-radius: 5px;
  
    &:active,
    &:focus {
      outline: 0;
    }
    &::placeholder {
      color: var(--select-text-color);
    }
  }
  
  .searchBtn {
    padding: 10px;
    margin-left: 5px;
    border: none;
    border-radius: 5px;
    background-color: var(--contrast-color-light);
  }
  
  /* LIST OF COMPOUNDS */
  #list {
    overflow: hidden;
  
    margin-top: 3%;
    margin-left: 2%;
  
    background-color: var(--background-color-second);
    height: 85%;
    width: 100%;
  
    border-radius: 10px;
  }
  
  /* COMPOUND BLOCK */
  .compound {
    position: relative;
    overflow: hidden;
  
    padding: 5%;
    margin: 5%;
  
    background: var(--background-color-compound);
  
    border-radius: 5px;
    transition: all 1s ease-in-out;
    &:hover {
      background: linear-gradient(
        120deg,
        var(--background-window-color) 10%,
        var(--extra-light) 100%
      );
  
      transition: all 1s ease-in-out;
    }
  }
  .description {
    color: var(--contrast-color-light);
    font-size: 12px;
    margin-top: 3px;
  }
  #right {
    position: absolute;
    display: flex;
  
    margin-top: 20px;
    margin-left: 850px;
  
    width: 285px;
    height: 525px;
  
    animation: effect 0.3s ease-in-out;
    animation-delay: 0.3s;
    opacity: 0;
    animation-fill-mode: forwards;
  }
  
  #listInfo {
    background-color: var(--background-color-second);
  
    border-radius: 10px;
    width: 100%;
    box-shadow: -6px 6px 22px var(--shadow-color-first),
      6px -6px 22px var(--shadow-color-second);
      overflow: scroll;
  }
  .show {
    height: 20px;
    width: 30px;
    border: none;
    border-radius: 2px;
    cursor: pointer;
    background-color: var(--extra-light);
  }
  .showInfo {
    margin-top: 35px;
    margin-left: 815px;
    position: absolute;
    z-index: 1;
    animation: effect 0.3s ease-in-out;
    animation-delay: 0.5s;
    opacity: 0;
    animation-fill-mode: forwards;
  }
  .showSelect {
    margin-top: 35px;
    margin-left: 5px;
    position: relative;
  
    z-index: 1;
  
    animation: effect 0.3s ease-in-out;
    animation-delay: 0.5s;
    opacity: 0;
    animation-fill-mode: forwards;
  }
  
  .compoundWindow {
    display: flex;
    position: fixed;
  }
  
  .notification {
    margin-top: 50px;
    margin-left: 140px;
    width: 700px;
    height: 500px;
  
    position: fixed;
  
    animation: effect 0.2s ease-in-out;
    animation-delay: 0.3s;
    opacity: 0;
    animation-fill-mode: forwards;
    //display: flex;
    h3 {
      text-align: center;
      margin-top: 200px;
      margin-left: 160px;
      color: var(--select-text-color);
      font-weight: 400;
      font-size: 20px;
    }
  }
  
  .arrow {
    position: absolute;
    filter: opacity(30%);
    top: 13%;
    left: 22%;
    transform: rotate(-10deg);
  
    animation: effect 0.2s ease-in-out;
    animation-delay: 0.3s;
    opacity: 0;
    animation-fill-mode: forwards;
  }
  
  .pap {
    position: absolute;
    top: 60%;
    left: 43%;
    filter: opacity(40%);
  
    animation: effect 0.2s ease-in-out;
    animation-delay: 0.5s;
    opacity: 0;
    animation-fill-mode: forwards;
  }
  
  .isShowSelect {
    margin-left: 15px;
  }
  
  .isShowInfo {
    margin-left: 1115px;
  }
  .warningBlock {
    background: rgba(21, 21, 21, 0.748);
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    opacity: 0;
  }
  .warning {
    top: 40%;
    z-index: 1;
    position: absolute;
    margin: auto;
    min-width: 99%;
    height: 30%;
    background-color: var(--background-window-color);
    text-align: center;
    padding: 20px;
    border-radius: 10px;
  
    h4 {
      margin-top: 10px;
      font-size: 1rem;
      color: var(--contrast-color-dark);
    }
  
    h5 {
      color: var(--select-text-color);
      font-size: 18px;
    }
  }
  
  @keyframes effect {
    0% {
      opacity: 0;
    }
    80% {
      opacity: 0.85;
    }
    100% {
      opacity: 1;
    }
  }
  
  @media screen and (max-width: 767px) {
    .warningBlock {
      opacity: 1;
    }
  }

